fix: memory overflow, introduce voicepool with max voices

--- a/src/screens/ContactScreen.module.css
+++ b/src/screens/ContactScreen.module.css
@@ -18,3 +18,11 @@ img.ccIcon {
     margin-left: 3px;
     vertical-align: text-bottom;
 }
+
+.button {
+    border: none;
+    background: none;
+    color: inherit;
+    font-size: 1.5rem;
+    cursor: pointer;
+}
